# dao

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  catalog.json  catalog.py  config.json  data_stores.json  main.py  pyproject.toml  s3.py  tables.json
dao/: S3.py  __init__.py  dao.py  dao_interface.py  dao_mediator.py  redshift.py  registrar.py  utils.py
dao/config/: config.py
dao/core/: dao.py  dao_interface.py  dao_mediator.py  dao_registrar.py
dao/core/router/: router.py
dao/core/signature/: argument_signature.py  method_signatures.py  signature.py  signature_factory.py
dao/data_object/: __init__.py  data_object.py  table_object.py
dao/data_object/table/: table_factory.py  table_object.py
dao/data_store/: __init__.py  data_store.py  data_store_factory.py
dao/router/: router.py
dao/sig/: signature.py  signature2.py
dao/signature/: argument_signature.py  method_signatures.py  signature.py  signature_factory.py  signature_old.py
docs/rfcs/: 001-glue-catalog-metadata-translation.md  002-hybrid-data-object-property-routing.md  data_object_properties_in_routing.md
examples/: README.md  catalog.py  data_stores.json  main.py  redshift.py  s3.py
examples/advanced/: 01_s3_file_operations.py  02_delta_lake_tables.py  03_multi_format_pipeline.py  README.md  catalog.json  catalog.py  data_stores.json  main.py
examples/advanced/data_classes/: delta.py  hudi.py  redshift.py  s3.py
examples/advanced/data_objects/: README.md  __init__.py  s3.py
examples/advanced/s3/: deltalake.py  s3_boto3.py
examples/data_classes/: delta.py  hudi.py
examples/interfaces/: README.md
examples/patterns/: 01_factory_pattern.py  02_catalog_pattern.py  03_medallion_pipeline.py  README.md
examples/patterns/config/: data_objects.json  data_stores.json
examples/quickstart/: 01_basic_usage.py  02_multiple_interfaces.py  README.md  catalog.json  catalog.py  data_stores.json  main.py
examples/quickstart/data_classes/: redshift.py
examples/shared/: README.md  __init__.py  mock_interfaces.py
examples/src/: basic.py  catalog.py  factory.py
interface_classes/redshift/: odbc.py  spark.py
interface_classes/s3/: deltalake.py  hudi.py  s3_boto3.py  spark.py
src/dao/: __init__.py  decorators.py  registrar.py
src/dao/catalog/: base.py  exceptions.py  file.py  glue.py
src/dao/core/: __init__.py  accessor.py  dao.py  dao_interface.py  dao_mediator.py  dao_registrar.py  registrar.py  router.py
src/dao/data_object/: __init__.py  data_object.py  data_object_factory.py  registry.py  s3.py  s3_data_objects.py  table_object.py
src/dao/data_store/: __init__.py  (+3 more)
tests/: test_catalog_type_resolution.py  test_data_object_registry.py  test_enrich_from_data_object.py  test_glue_catalog.py  test_glue_extractors.py  test_glue_translator.py  test_router.py  test_router_choose_route.py  test_when_data_object_lookup.py  test_when_decorator.py
utils/logger/: root_logger.py
(+13 files in other folders)
