[project]
name = "dao"
version = "1.0.0"
description = "A Convience Data Access Object"
authors = [
    { name = "Sandeep Evani", email = "sandeepevani01@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "makefun>=1.16.0",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
    "uv-build>=0.9.4",
]
example = [
    "boto3>=1.42.21",
    "delta-spark>=4.0.0",
    "pyspark>=4.1.0",
    "redshift-connector>=2.1.10",
]
