[project]
name = "dao"
version = "1.0.0"
description = "A Convenience Data Access Object"
authors = [
    { name = "Sandeep Evani", email = "sandeepevani01@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
]

[project.scripts]
dao = "dao:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"