[project]
name = "dao"
version = "1.0.0"
description = "A Convience Data Access Object"
authors = [
    { name = "Sandeep Evani", email = "sandeepevani01@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.21",
    "botocore>=1.42.21",
    "makefun>=1.16.0",
    "typeguard>=4.5.1",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "D",      # pydocstyle (docstring rules)
    "ANN",    # flake8-annotations (enforce type annotations)
]
ignore = [
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package (__init__.py)
    "D105",   # missing docstring in magic method (__repr__, etc.)
    "D107",   # missing docstring in __init__ (class docstring suffices)
    "D203",   # conflicts with D211 (no-blank-line-before-class)
    "D213",   # conflicts with D212 (multi-line-summary-first-line)
    "ANN401", # disallow Any — too strict for a framework
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D",       # no docstring enforcement in tests
    "ANN",     # no annotation enforcement in tests
]

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.1",
    "uv-build>=0.9.4",
]
example = [
    "boto3>=1.42.21",
    "delta-spark>=4.0.0",
    "pyspark>=4.1.0",
    "redshift-connector>=2.1.10",
]
